--- a/src/Modules/Laser.Orchard.jQueryPlugins/BootstrapItalia-2.6.1/css/bootstrap-italia-orchard-comuni.css
+++ b/src/Modules/Laser.Orchard.jQueryPlugins/BootstrapItalia-2.6.1/css/bootstrap-italia-orchard-comuni.css
@@ -9,6 +9,14 @@ primary lighter: #F0F8F5;
   --bootstrap-italia-version: "2.6.1";
 }
 
+/*@function hsb($h-hsb, $s-hsb, $b-hsb) {
+
+	$l-hsl: calc(calc($b-hsb / 2) * calc(2 - calc($s-hsb / 100)));
+	//$s-hsl: calc(($b-hsb * $s-hsb) / if($l-hsl < 50, $l-hsl * 2, 200 - $l-hsl * 2));
+	//$s-hsl: calc(calc($b-hsb * $s-hsb) / calc(100 - 2 * abs(calc(50 - $l-hsl))));
+	$s-hsl: calc(calc($b-hsb * $s-hsb) / calc(100 - 2 * abs(calc(50 - $l-hsl))));
+	@return hsl($h-hsb, calc($s-hsl * 1%), calc($l-hsl * 1%));
+}*/
 /***************************** 1 ****************************************/
 /***************************** 2 ****************************************/
 /***************************** 1 ****************************************/
