--- a/src/Themes/KrakeDefaultTheme/Styles/style.css
+++ b/src/Themes/KrakeDefaultTheme/Styles/style.css
@@ -457,20 +457,15 @@ ul {
 }
 
 /*Bootstrap multi-level menu*/
-.dropdown-submenu {
-    position: relative;
+
+.dropdown-item.sublevel::after {
+    transform: rotate(270deg); /* we optain a right arrow */
+    position: absolute;
+    right: 4px;
+    top: 50%;
 }
 
-    .dropdown-submenu a::after {
-        transform: rotate(-90deg);
-        position: absolute;
-        right: 6px;
-        top: .8em;
-    }
-
-    .dropdown-submenu .dropdown-menu {
-        top: 0;
-        left: 100%;
-        margin-left: .1rem;
-        margin-right: .1rem;
-    }
+.navbar-expand-lg .navbar-nav .dropdown-menu .dropdown-menu {
+    left: calc(100% + 3px);
+    top: 0;
+}
