--- a/src/Themes/KrakeDefaultTheme/Views/MenuItem.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/MenuItem.cshtml
@@ -28,7 +28,7 @@
             if (items.Any()) {
                 <ul class="dropdown-menu">
                     @foreach (var item in Model.Items) {
-                        item.Classes.Add("dropdown-item");
+                        item.Classes.Add("dropdown-item sublevel");
                         <li class="dropdown">
                             @Display(item)
                         </li>
