--- a/src/Themes/KrakeDefaultTheme/Views/Parts.MenuWidget-Navigation.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/Parts.MenuWidget-Navigation.cshtml
@@ -11,7 +11,7 @@
 
 }
 
-<nav class="navbar navbar-expand-lg navbar-default">
+<nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="~/">@WorkContext.CurrentSite.SiteName</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent@(Model.ContentItem.Id)" aria-controls="navbarSupportedContent@(Model.ContentItem.Id)" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
