--- a/src/Themes/KrakeDefaultTheme/Views/Parts.Common.Body-Page.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/Parts.Common.Body-Page.cshtml
@@ -12,18 +12,14 @@
 }
 
 <div class="row">
-	<div class="col-xs-12 col-sm-3 col-index no-pad-right">
+	<div class="col-12 col-md-3 col-index no-pad-right">
         @Display(New.PlaceholderLogo())
 	</div>
-	<div class="col-xs-8 col-sm-6 col-index">
+	<div class="col-8 col-md-6 col-index">
 		@Model.Html
 	</div>
-	<div class="col-xs-4 col-sm-3 col-index no-pad-left">
+	<div class="col-4 col-md-3 col-index no-pad-left">
          @if (WorkContext.CurrentUser != null) {
-            @*urlActionUser = Url.Action("ChangePassword", new { Controller = "Account", Area = "Orchard.Users" });
-            <a href="@urlActionUser" class="logout-button"><i class="fa fa-users fa-4x lineheight-2" aria-hidden="true"></i><h6>@T("Logged")</h6></a>*@ 
-            
-            //Se volete checked IList bottone faccia il logout commentare le righe sopra e decommentare le due sotto
             urlActionUser = Url.Action("LogOff", new { Controller = "Account", Area = "Orchard.Users", ReturnUrl = Context.Request.RawUrl });
             <a href="@urlActionUser" class="logout-button"><i class="fa fa-sign-out fa-4x lineheight-2" aria-hidden="true"></i><h6>@T("Logout")</h6></a>
         } else {
