--- a/src/Themes/KrakeDefaultTheme/Views/Fields/MediaLibraryPicker.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/Fields/MediaLibraryPicker.cshtml
@@ -68,7 +68,7 @@
     <div class="container gallery">
         <div class="row">
             @foreach (var content in contents) {
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
+                <div class="col-lg-3 col-md-4 col-6 thumb text-center">
 
                     @switch (content.LogicalType) {
                     case "Image":
