--- a/src/Themes/KrakeDefaultTheme/Views/OpenAuthRegister.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/OpenAuthRegister.cshtml
@@ -24,7 +24,7 @@
 }
 <div class="row">
     @using (Html.BeginFormAntiForgeryPost()) {
-        <div class="col-xs-12 col-sm-12 col-padding-low">
+        <div class="col-12 col-sm-12 col-padding-low">
             <div class="no-margin">
                 <h3>@Html.TitleForPage(T("Create a New Account").ToString())</h3>
                 <p>@T("Account informations")</p>
