--- a/src/Themes/KrakeDefaultTheme/Views/PasswordChangeForm.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/PasswordChangeForm.cshtml
@@ -39,7 +39,7 @@
 
             @using (Html.BeginFormAntiForgeryPost()) {
                 <div class="row">
-                    <div class="col-xs-12 col-sm-12">
+                    <div class="col-12 col-sm-12">
                         <fieldset>
                             @if (Model.LoggedUser) {
                                 <div class="form-group">
