--- a/src/Themes/KrakeDefaultTheme/Views/Orchard.Users/Account/RequestLostPassword.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/Orchard.Users/Account/RequestLostPassword.cshtml
@@ -1,10 +1,10 @@
 ﻿@using Orchard.Environment.Configuration;
 <div class="row">
-    <div class="col-xs-12 col-sm-4 col-index">
+    <div class="col-12 col-sm-4 col-index">
         @Display(New.PlaceholderLogo())
     </div>
 
-    <div class="col-xs-12 col-sm-8 col-padding-low">
+    <div class="col-12 col-sm-8 col-padding-low">
         <h3>@Html.TitleForPage(T("Lost Password").ToString())</h3>
         <p>@T("Please enter your username or email address. You will receive a link to create a new password via email.")</p>
         <div class='space-20'></div>
