--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -1,4 +1,8 @@
 ﻿/*Krake*/
+/* Variables */
+$fontsize-default: 14px;
+
+
 
 @font-face {
     font-family: 'krake';
@@ -80,10 +84,13 @@ button, .button, a.button {
     border-radius: 2px;
     box-shadow: none;
     height: 30px;
-    line-height: 20px;
     min-width: 110px;
-    font-size: 13.4px;
+    font-size: $fontsize-default;
     padding: 6px 12px !important;
+}
+
+.widgets-actions {
+    font-size: $fontsize-default;
 }
 /* style buttons for google maps*/
 button.gm-control-active, .button.gm-control-active, a.button.gm-control-active {
@@ -296,6 +303,7 @@ fieldset {
     &.publish-button {
         border: 0px !important;
     }
+
     &.unpublish-button {
         border: 0px !important;
     }
@@ -1130,7 +1138,7 @@ input[type="number"]:focus {
 .dashboard-box .dashboard-box-content {
     padding: 25px 40px;
     color: #fff;
- 	margin: 0 -30px;
+    margin: 0 -30px;
     position: absolute;
     bottom: 0px;
     width: 100%;
@@ -1460,10 +1468,6 @@ fieldset small {
     clear: right;
 }
 
-#widgets-zones-orphans.widgets-listed li {
-    padding: 0 1em 0.75em 1em;
-}
-
 .widgets-listed li {
     padding: 0 1em 0.25em 1em;
 }
@@ -1515,6 +1519,11 @@ fieldset small {
     background: #fff none repeat scroll 0 0;
     border: 1px solid #f5f5f5;
     padding: 5px;
+
+    h2 {
+        font-size: 1.0em;
+        padding: 2px 2px;
+    }
 }
 
 
@@ -1530,13 +1539,30 @@ fieldset small {
     color: #999;
 }
 
-.widgets .layout-widgets-placement .zones-container .zones ol li ul.widgets li {
-    position: relative;
-    background: #f3f4f5;
-    margin: 10px 0;
-    padding: 5px 5px 5px 25px;
-    color: #333;
+.widgets {
+    .layout-widgets-placement {
+        .zones-container {
+            .zones {
+                ol {
+                    li {
+                        ul {
+                            &.widgets {
+                                li {
+                                    position: relative;
+                                    background: #f3f4f5;
+                                    margin: 10px 0;
+                                    padding: 5px 5px 5px 25px;
+                                    color: #333;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
+
 
 .layout-toolbox-items section {
     padding: 0;
@@ -11909,7 +11935,7 @@ body {
         &.tagit-choice {
             cursor: pointer;
 
-            >a {
+            > a {
                 &.tagit-close {
                     &:before {
                         content: "\00a0"; // some whitespace before the 'x' to remove a tag
@@ -11924,4 +11950,11 @@ body {
     max-height: calc(100vh - 80px);
     overflow-y: scroll;
     overflow-x: hidden;
+}
+
+
+form {
+    .switch-for-switchable {
+        display: contents; /*adjust jquery switchable preventing scrollbars to appear */
+    }
 }
