--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -1515,6 +1515,12 @@ fieldset small {
     border: 1px solid #f5f5f5;
 }
 
+#widgets {
+    &.group {
+        font-size: 0.9em;
+    }
+}
+
 #widgets-zones, #widgets-zones-orphans, #widgets-available {
     background: #fff none repeat scroll 0 0;
     border: 1px solid #f5f5f5;
@@ -1527,16 +1533,35 @@ fieldset small {
 }
 
 
-#main .layout-widgets-placement ul.widgets li h3 {
-    float: left;
-    margin: 0 0.25em 0 0;
-}
+#main {
+    #layout-widgets-placement { //Site Layers Widgets
+        h2 {
+            margin: 0.7em 0 0.3em;
+        }
+    }
 
-#main .layout-widgets-placement ul.widgets li h3:before {
-    font-family: FontAwesome;
-    content: "\f047";
-    margin-left: -15px;
-    color: #999;
+    .layout-widgets-placement { //Contrib Widgets
+        h3, h2 {
+            margin: 0.75em 0 0;
+        }
+
+
+        ul.widgets {
+            li {
+                h3 {
+                    float: left;
+                    margin: 0 0.25em 0 0;
+
+                    &:before {
+                        font-family: FontAwesome;
+                        content: "\f047";
+                        margin-left: -15px;
+                        color: #999;
+                    }
+                }
+            }
+        }
+    }
 }
 
 .widgets {
@@ -1606,7 +1631,6 @@ fieldset small {
 div#widgets-layer-visibility {
     padding: 24px 0px 4px 0px;
 }
-
 /* fix display of widgets to prevent text overwriting in case of small screen */
 .widgets-listed .widgets-actions {
     position: absolute;
@@ -1813,7 +1837,6 @@ html.dashboard #content {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
-
 /*settings vimeo*/
 #VideoSettings #Whitelist {
     margin-top: 20px;
@@ -1822,7 +1845,6 @@ html.dashboard #content {
 #VideoSettings #License, #VideoSettings #ReviewLink, #VideoSettings #Locale {
     margin-bottom: 20px;
 }
-
 /*advanced search*/
 input#AdvancedOptions_SelectedToDateEditor_Date, input#AdvancedOptions_SelectedFromDateEditor_Date {
     min-width: 100px;
@@ -1836,7 +1858,6 @@ input#AdvancedOptions_SelectedToDateEditor_Date, input#AdvancedOptions_SelectedF
 div#appliedFilters {
     padding: 12px;
 }
-
 /*taxonomy*/
 .taxonomy-wrapper span.expando-glyph-container {
     bottom: -4px;
@@ -1846,22 +1867,18 @@ div#appliedFilters {
     float: initial;
     margin-top: 0px;
 }
-
 /*ul pagina abilita/disabilita temi*/
 .templates {
     padding-left: 94px;
 }
-
 /*seo part*/
 #seo-data-container .editor-label {
     margin-top: 10px;
 }
-
 /*summary admin padding*/
 .primary {
     padding-top: 10px;
 }
-
 /*seo script text area*/
 #templateArea {
     height: auto;
@@ -1871,12 +1888,10 @@ div#appliedFilters {
     min-width: 85px;
     width: 85px;
 }
-
 /*questionnaires*/
 .st-btn-fieldset {
     vertical-align: initial;
 }
-
 /*Admin*/
 @-webkit-keyframes fadeIn {
     from {
@@ -3288,7 +3303,6 @@ a.text-success:hover {
     .menubar-pin .logo-icon-minimized {
         display: none;
     }
-
     /*.menubar-visible .logo-icon-minimized {
         display: initial;
     }
@@ -3296,7 +3310,6 @@ a.text-success:hover {
      .menubar-visible .logo-icon {
         display: none;
     }*/
-
 }
 
 @media (min-width: 769px) {
@@ -6011,7 +6024,6 @@ fieldset[disabled] .btn-default-dark.active {
 .btn-default-dark.btn-icon-toggle {
     color: #20252b;
 }
-
 /* Styles to override some parameter for the password eye, used in EncryptedStringField view */
 .btn-default.reveal, .btn-default.reveal:hover {
     color: #444 !important;
@@ -11570,12 +11582,10 @@ div.summary div.stars-rating h3 {
     float: left;
     margin: 5px 5px 0 0 !important;
 }
-
 /*Workaround: O 1.10 ha una logica di ricerca che si attiva via js, non supportata dal tema di admin attuale*/
 input#adminfilter {
     display: none;
 }
-
 /*settings vimeo*/
 #VideoSettings #Whitelist {
     margin-top: 20px;
@@ -11584,7 +11594,6 @@ input#adminfilter {
 #VideoSettings #License, #VideoSettings #ReviewLink, #VideoSettings #Locale {
     margin-bottom: 20px;
 }
-
 /*content picker field*/
 .content-picker-tab {
     border-top: 3px solid #de625e !important;
@@ -11594,20 +11603,17 @@ input#adminfilter {
     margin-top: 10px;
     margin-left: 10px;
 }
-
 /*devtools buttons*/
 .devButtons a {
     margin: 1px;
     margin-top: 3px;
     width: 180px;
 }
-
 /*contact index*/
 #buttonContactSearch {
     position: relative;
     z-index: 1;
 }
-
 /*Widgets container*/
 ul.widgets li:first-child {
     margin-top: 15px !important;
@@ -11617,7 +11623,6 @@ ul.widgets h3 {
     font-weight: normal;
     font-size: 15px;
 }
-
 /*Media Library*/
 .media-library-main-list-overlay p {
     margin: 0;
@@ -11630,7 +11635,6 @@ ul.widgets h3 {
 #media-library-main-editor .content-localization h4 {
     font-size: small;
 }
-
 /* Navigation */
 #local-navigation {
     margin-bottom: -9px;
@@ -11643,7 +11647,6 @@ ul.widgets h3 {
         }
     }
 }
-
 /* Article dialog, for position calculate from jquery, change starded top for calculate correct position  */
 .dialog-wrapper .dialog {
     top: 0px !important;
@@ -11663,7 +11666,6 @@ ul.widgets h3 {
 .error {
     padding: 4px 4px 4px 26px;
 }
-
 /* Placement Admin*/
 #placement .zone-container h2 {
     font-size: 19px;
@@ -11673,7 +11675,6 @@ ul.widgets h3 {
 #placement .zone-container h3 {
     font-size: 15px;
 }
-
 /* LTEAdmin Site.css and other css overrides*/
 label {
     display: inherit;
@@ -11787,8 +11788,6 @@ select:focus, textarea:focus, input.text:focus, input.text-box:focus, input.text
         width: 100% !important;
     }
 }
-
-
 /* Google Maps Styles */
 .gm-style {
     button {
@@ -11803,7 +11802,6 @@ select:focus, textarea:focus, input.text:focus, input.text-box:focus, input.text
         }
     }
 }
-
 /* Red text for validation error hints. */
 .field-validation-error {
     color: #dd4b39; /* This is the same red used for validation errors in the header of the page. */
@@ -11862,7 +11860,6 @@ table.autoroute-settings-patterns input, table.autoroute-settings-patterns .text
 .text-through {
     text-decoration: line-through;
 }
-
 /* Projection Part */
 .row-settings-projection-part {
     display: flex;
@@ -11877,7 +11874,6 @@ table.autoroute-settings-patterns input, table.autoroute-settings-patterns .text
 .lock-editing-projection-part-field {
     padding-top: 20px;
 }
-
 /* Backoffice links for actions on contents */
 .action-links {
     display: inline-flex;
@@ -11889,7 +11885,6 @@ table.autoroute-settings-patterns input, table.autoroute-settings-patterns .text
     content: "|";
     margin: 0 2px 0 6px;
 }
-
 /* buttons in Editor views (save, publish...) are often contained in their own fieldsets 
     with classes like save-button and so on
 */
@@ -11899,7 +11894,6 @@ table.autoroute-settings-patterns input, table.autoroute-settings-patterns .text
     margin: 0 12px 0 0;
     padding: 0 12px;
 }
-
 /* Tiny MCE full screen fix */
 #layout-main div.mce-fullscreen {
     width: auto;
