--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -1214,6 +1214,9 @@ fieldset small {
   background: #f4f4f4;
   border: 1px solid #f5f5f5; }
 
+#widgets.group {
+  font-size: 0.9em; }
+
 #widgets-zones, #widgets-zones-orphans, #widgets-available {
   background: #fff none repeat scroll 0 0;
   border: 1px solid #f5f5f5;
@@ -1222,15 +1225,20 @@ fieldset small {
     font-size: 1.0em;
     padding: 2px 2px; }
 
+#main #layout-widgets-placement h2 {
+  margin: 0.7em 0 0.3em; }
+
+#main .layout-widgets-placement h3, #main .layout-widgets-placement h2 {
+  margin: 0.75em 0 0; }
+
 #main .layout-widgets-placement ul.widgets li h3 {
   float: left;
   margin: 0 0.25em 0 0; }
-
-#main .layout-widgets-placement ul.widgets li h3:before {
-  font-family: FontAwesome;
-  content: "\f047";
-  margin-left: -15px;
-  color: #999; }
+  #main .layout-widgets-placement ul.widgets li h3:before {
+    font-family: FontAwesome;
+    content: "\f047";
+    margin-left: -15px;
+    color: #999; }
 
 .widgets .layout-widgets-placement .zones-container .zones ol li ul.widgets li {
   position: relative;
