--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -11719,58 +11719,70 @@ select:focus, textarea:focus, input.text:focus, input.text-box:focus, input.text
     border-color: #c23321;
 }
 
-.contentItems.bulk-items .summary .related a:not(.btn) {
-    /*threat as buttons btn btn-primary btn-xs all links in SummaryAdmin related*/
-    display: inline-block;
-    margin-bottom: 0;
-    font-weight: normal;
-    text-align: center;
-    vertical-align: middle;
-    -ms-touch-action: manipulation;
-    touch-action: manipulation;
-    cursor: pointer;
-    background-image: none;
-    border: 1px solid transparent;
-    white-space: nowrap;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    border-radius: 4px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    /*btn*/
-    border-radius: 3px;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    border: 1px solid transparent;
-    /*btn-primary*/
-    background-color: #3c8dbc;
-    border-color: #367fa9;
-    color: #fff;
-    /*btn-xs*/
-    font-size: 12px;
-    line-height: 1.5;
-    padding: 1px 5px;
+.contentItems {
+    &.bulk-items {
+        .summary {
+            .related {
+                a.btn {
+                    color: #fff;
+                    margin-left: 5px;
+                }
+
+                a[itemprop="RemoveUrl UnsafeUrl"]:not(.btn) {
+                    background-color: #dd4b39 !important;
+                    border-color: #d73925;
+                }
+
+                a:not(.btn) {
+                    /*threat as buttons btn btn-primary btn-xs all links in SummaryAdmin related*/
+                    display: inline-block;
+                    margin-bottom: 0;
+                    font-weight: normal;
+                    text-align: center;
+                    vertical-align: middle;
+                    -ms-touch-action: manipulation;
+                    touch-action: manipulation;
+                    cursor: pointer;
+                    background-image: none;
+                    border: 1px solid transparent;
+                    white-space: nowrap;
+                    padding: 6px 12px;
+                    font-size: 14px;
+                    line-height: 1.42857143;
+                    border-radius: 4px;
+                    -webkit-user-select: none;
+                    -moz-user-select: none;
+                    -ms-user-select: none;
+                    user-select: none;
+                    /*btn*/
+                    border-radius: 3px;
+                    -webkit-box-shadow: none;
+                    box-shadow: none;
+                    border: 1px solid transparent;
+                    /*btn-primary*/
+                    background-color: #3c8dbc;
+                    border-color: #367fa9;
+                    color: #fff;
+                    /*btn-xs*/
+                    font-size: 12px;
+                    line-height: 1.5;
+                    padding: 0.25rem 0.5rem;
+
+                    &:hover, &:active {
+                        background-color: #367fa9;
+                        -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+                        -moz-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+                        box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+                    }
+                }
+            }
+        }
+    }
 }
 
-.contentItems.bulk-items .summary .related a[itemprop="RemoveUrl UnsafeUrl"]:not(.btn) {
-    background-color: #dd4b39 !important;
-    border-color: #d73925;
-}
 
-.contentItems.bulk-items .summary .related a:not(.btn):hover, .contentItems .summary .related a:not(.btn):active {
-    background-color: #367fa9;
-    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    -moz-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-}
 
-.contentItems.bulk-items .summary .related a.btn {
-    color: #fff;
-    margin-left: 5px;
-}
+
 
 .manage-type .content {
     min-height: unset;
