--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -9557,6 +9557,14 @@ select:focus, textarea:focus, input.text:focus, input.text-box:focus, input.text
   background-color: #dd4b39 !important;
   border-color: #c23321; }
 
+.contentItems.bulk-items .summary .related a.btn {
+  color: #fff;
+  margin-left: 5px; }
+
+.contentItems.bulk-items .summary .related a[itemprop="RemoveUrl UnsafeUrl"]:not(.btn) {
+  background-color: #dd4b39 !important;
+  border-color: #d73925; }
+
 .contentItems.bulk-items .summary .related a:not(.btn) {
   /*threat as buttons btn btn-primary btn-xs all links in SummaryAdmin related*/
   display: inline-block;
@@ -9590,21 +9598,12 @@ select:focus, textarea:focus, input.text:focus, input.text-box:focus, input.text
   /*btn-xs*/
   font-size: 12px;
   line-height: 1.5;
-  padding: 1px 5px; }
-
-.contentItems.bulk-items .summary .related a[itemprop="RemoveUrl UnsafeUrl"]:not(.btn) {
-  background-color: #dd4b39 !important;
-  border-color: #d73925; }
-
-.contentItems.bulk-items .summary .related a:not(.btn):hover, .contentItems .summary .related a:not(.btn):active {
-  background-color: #367fa9;
-  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  -moz-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125); }
-
-.contentItems.bulk-items .summary .related a.btn {
-  color: #fff;
-  margin-left: 5px; }
+  padding: 0.25rem 0.5rem; }
+  .contentItems.bulk-items .summary .related a:not(.btn):hover, .contentItems.bulk-items .summary .related a:not(.btn):active {
+    background-color: #367fa9;
+    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    -moz-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125); }
 
 .manage-type .content {
   min-height: unset; }
