--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Territory.AddressType.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Territory.AddressType.cshtml
@@ -2,12 +2,14 @@
 @model TerritoryAddressTypeEditViewModel
 
 <div class="form-group">
-    <div class="checkbox-inline">
-        @Html.CheckBoxFor(m => m.Shipping)
-        @Html.LabelFor(m => m.Shipping, T("Enable this territory for shipping address configuration."))
-    </div>
-    <div class="checkbox-inline">
+    <div>
         <label>
+            @Html.CheckBoxFor(m => m.Shipping)
+            @T("Enable this territory for shipping address configuration.")
+        </label>
+    </div>
+    <div>
+        <label class="form-check-label">
             @Html.CheckBoxFor(m => m.Billing)
             @T("Enable this territory for billing address configuration.")
         </label>
