--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -671,15 +671,14 @@ input.tokenized {
     background: rgba(0, 0, 0, 0) url("../Styles/images/list-arrow.png") no-repeat scroll 0 0;
     cursor: pointer;
     height: 28px;
-    margin-top: 1px;
     padding-right: 35px;
     position: absolute;
     right: 100%;
     width: 10px;
 }
 
-div.settings span.tokenized-popup {
-    margin-top: -6px;
+div.settings span.tokenized-popup { // in the content-types for some reasons we have to have a negative top position in order to place corretly the token icon
+    top: -0.5em;
 }
 
 #maplocation {
@@ -1433,12 +1432,6 @@ fieldset small {
 .box.box-card .box-header h3 {
     font-weight: bold;
     color: #313534;
-}
-
-.form-control {
-    border-color: #d2d6de;
-    border-radius: 0;
-    box-shadow: none;
 }
 
 .form-control:not(select) {
@@ -5170,20 +5163,6 @@ legend.text-right:after {
 .form-control-feedback {
     top: auto;
     bottom: 0;
-}
-
-.form-control {
-    padding: 0;
-    height: 37px;
-    border-left: none;
-    border-right: none;
-    border-top: none;
-    border-bottom-color: rgba(12, 12, 12, 0.12);
-    background: transparent;
-    color: #0c0c0c;
-    font-size: 16px;
-    -webkit-box-shadow: none;
-    box-shadow: none;
 }
 
 .form-control.placeholder {
