adjust the size of the multiple select in order to make more usable reading the list

--- a/src/Modules/Contrib.Widgets/Views/DefinitionTemplates/WidgetsContainerSettingsViewModel.cshtml
+++ b/src/Modules/Contrib.Widgets/Views/DefinitionTemplates/WidgetsContainerSettingsViewModel.cshtml
@@ -1,5 +1,8 @@
 ﻿@model Contrib.Widgets.ViewModels.WidgetsContainerSettingsViewModel
-
+@{ 
+    var maxUIVisibleZones = Math.Min(Model.Zones.Count(),25);
+    var maxUIVisibleWidgets = Math.Min(Model.Widgets.Count, 25);
+}
 <fieldset>
     <div>
         @Html.CheckBoxFor(m => m.UseHierarchicalAssociation)
@@ -12,12 +15,12 @@
     </div>
     <div>
         @Html.LabelFor(m => m.SelectedZones, T("Allowed zones:"))
-        @Html.ListBoxFor(m => m.SelectedZones, new MultiSelectList(Model.Zones), new { style = "display:block;" })
+        @Html.ListBoxFor(m => m.SelectedZones, new MultiSelectList(Model.Zones), new { style = "display:block;", size = maxUIVisibleZones })
         <span class="hint">@T("Select the zones where the widgets can be placed. If no zone is selected all of them will be available.")</span>
     </div>
     <div style="margin-top:20px;">
         @Html.LabelFor(m => m.SelectedWidgets, T("Allowed widget types:"))
-        @Html.ListBoxFor(m => m.SelectedWidgets, new MultiSelectList(Model.Widgets), new { style = "display:block;" })
+        @Html.ListBoxFor(m => m.SelectedWidgets, new MultiSelectList(Model.Widgets), new { style = "display:block;", size = maxUIVisibleWidgets })
         <span class="hint">@T("Select which types of widgets can be added to the content. If no widget type is selected all of them will be available.")</span>
     </div>
     <div>
