--- a/src/Themes/KrakeDefaultTheme/Styles/style.css
+++ b/src/Themes/KrakeDefaultTheme/Styles/style.css
@@ -269,7 +269,7 @@ label > span {
 
 .placeholder-logo {
     width: 100%;
-    height:300px;
+    height: 300px;
     background: url(images/placeholder.png);
     padding-right: 20px;
     background-size: contain;
@@ -485,5 +485,6 @@ form {
     nav .dropdown-menu {
         border: 0px;
         padding-left: 1.25em;
-    }}
+    }
+}
 /*Bootstrap multi-level menu END*/
