calibrate form and register view to BS4

--- a/src/Themes/KrakeDefaultTheme/Views/Register.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/Register.cshtml
@@ -35,7 +35,7 @@
         }
 
     </div>
-    <div class="col-12 col-sm-8 col-index">
+    <div class="col-12 col-padding-low">
         <h3>@Html.TitleForPage(T("Create a New Account").ToString())</h3>
         <p>@T("Use the form below to create a new account.")</p>
         <p>@requirementsMessage</p>
