calibrates LogOn.cshtml and OpenAuthLogOn.cshtml with some pure BS4 classes

--- a/src/Themes/KrakeDefaultTheme/Views/Document.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/Document.cshtml
@@ -34,7 +34,7 @@
     //Scripts
     Script.Require("JQuery"); //jQuery, Orchard current version
     Script.Require("Bootstrap").AtFoot(); //Bootstrap, Orchard current version
-    Script.Include("krake.js").AtFoot(); //Theme custom js
+    Script.Include("krake.js","krake.min.js").AtFoot(); //Theme custom js
 }
 
 <!DOCTYPE html>
