--- a/src/Themes/KrakeDefaultTheme/Styles/style.css
+++ b/src/Themes/KrakeDefaultTheme/Styles/style.css
@@ -171,7 +171,7 @@ header a:hover, header a:hover {
 }
 
 .col-index {
-    padding: 6.5% !important;
+    padding: 2em!important;
 }
 
 .footer-text {
