--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -3058,7 +3058,6 @@ a.text-success:hover {
 }
 
 #base {
-  overflow: hidden;
   padding-left: 64px;
   width: 100%;
   min-height: 100%;
@@ -11659,9 +11658,9 @@ body.mce-fullscreen #header {
   content: " ";
 }
 
-/* Scroolbar for layout editor toolbox */
 .layout-editor > .layout-toolbox-wrapper {
-  max-height: calc(100vh - 80px);
-  overflow-y: scroll;
-  overflow-x: hidden;
+  /* forcing the toolbox to stay sticked at the the top of its container */
+  position: -webkit-sticky;
+  position: sticky;
+  top: 70px;
 }
