--- a/src/Themes/KrakeAdmin/Assets/baseadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/baseadmin.scss
@@ -1361,6 +1361,12 @@ a:hover, a:active, a:focus {
     }
 }
 
+.form-control {
+    border-radius: 0;
+    box-shadow: none;
+    border-color: #d2d6de;
+}
+
 .form-control:focus {
     border-color: #3c8dbc;
     box-shadow: none;
