--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -1737,10 +1737,13 @@ html.media-library-modal-window .button-cancel {
     margin-bottom: 10px;
 }
 
-#media-library-main-list .media-thumbnail {
-    height: auto;
-    overflow: hidden;
-    width: auto;
+#media-library-main-list {
+    li {
+        min-width: 200px;
+        min-height: 200px;
+        width: unset;
+        height: unset;
+    }
 }
 
 #header {
@@ -11606,17 +11609,31 @@ ul.widgets h3 {
     font-size: 15px;
 }
 /*Media Library*/
+
 .media-library-main-list-overlay p {
     margin: 0;
 }
 
-#media-library-main-editor .content-localization li {
-    display: inline;
+#media-library-main-editor {
+    ul.pageStatus {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-end;
+        align-content: flex-start;
+        flex-wrap: wrap;
+    }
+
+    .content-localization {
+        li {
+            display: inline-block;
+        }
+
+        h4 {
+            font-size: small;
+        }
+    }
 }
 
-#media-library-main-editor .content-localization h4 {
-    font-size: small;
-}
 /* Navigation */
 #local-navigation {
     margin-bottom: -9px;
